// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`bool_from_json.test.w 1`] = `
"Error: unable to parse bool:
- bool must be boolean
  --> ../../../examples/tests/error/bool_from_json.test.w:5:15
  | // If it is run with other tests, subsequent failures will be ignored in snapshot.
  | let j = Json { a: 123 };
  | 
5 | let a: bool = bool.fromJson(j.get("a"));
  |               ^
at <ABSOLUTE>/bool_from_json.test.w:5:15

Tests 1 failed (1)
Snapshots 1 skipped
Test Files 1 failed (1)
Duration <DURATION>"
`;

exports[`fail_to_start_simulator.test.w 1`] = `
"[ERROR] dep_on_failing_resource | Error: Failed to start container: Command "docker pull" exited with non-zero code 1 (see verbose logs)
[ERROR] dep_on_failing_resource | Error: Unable to resolve attribute 'host_port' for resource "root/env0/Container" referenced by "root/env0/test:dep_on_failing_resource/Handler"
[ERROR] (no test) | Error: Unable to resolve attribute 'host_port' for resource "root/env0/Container" referenced by "root/env0/test:dep_on_failing_resource/Handler"
Failed to start resources: "root/env0/test:dep_on_failing_resource/Handler", "root/cloud.TestRunner"

Tests 1 failed (1)
Snapshots 1 skipped
Test Files 1 failed (1)
Duration <DURATION>"
`;

exports[`inflight_stacktraces.test.w 1`] = `
"Error: $scope.node.root.typeForFqn is not a function
   --> ../../../examples/tests/error/inflight_stacktraces.test.w:10:21
   |   assert(false);
   | }
   | 
10 | test "expect.equal" {
   |                     ^
at get _liftMap [as _liftMap] <ABSOLUTE>/inflight_stacktraces.test.w:10:21

Tests 1 failed (1)
Snapshots 1 skipped
Test Files 1 failed (1)
Duration <DURATION>"
`;

exports[`invalid-token.test.w 1`] = `
"[ERROR] test cannot access unresolved token | Error: Unable to resolve attribute 'fake-attr' for resource "root/env0/MyResource/Resource" referenced by "root/env0/test:test cannot access unresolved token/Handler"
[ERROR] (no test) | Error: Unable to resolve attribute 'fake-attr' for resource "root/env0/MyResource/Resource" referenced by "root/env0/test:test cannot access unresolved token/Handler"
Failed to start resources: "root/env0/test:test cannot access unresolved token/Handler", "root/cloud.TestRunner"

Tests 1 failed (1)
Snapshots 1 skipped
Test Files 1 failed (1)
Duration <DURATION>"
`;

exports[`num_from_str.test.w 1`] = `
"Error: unable to parse "123a" as a number
  --> ../../../examples/tests/error/num_from_str.test.w:3:14
  | // Note that this test has to be alone because it needs to compile successfully and fail at preflight.
  | // If it is run with other tests, subsequent failures will be ignored in snapshot.
3 | let a: num = num.fromStr("123a");
  |              ^
at <ABSOLUTE>/num_from_str.test.w:3:14

Tests 1 failed (1)
Snapshots 1 skipped
Test Files 1 failed (1)
Duration <DURATION>"
`;

exports[`number_from_json.test.w 1`] = `
"Error: unable to parse num:
- num must be number
  --> ../../../examples/tests/error/number_from_json.test.w:5:14
  | // If it is run with other tests, subsequent failures will be ignored in snapshot.
  | let j = Json { a: "apples" };
  | 
5 | let a: num = num.fromJson(j.get("a"));
  |              ^
at <ABSOLUTE>/number_from_json.test.w:5:14

Tests 1 failed (1)
Snapshots 1 skipped
Test Files 1 failed (1)
Duration <DURATION>"
`;

exports[`repeat_construct_id.test.w 1`] = `
"Error: There is already a Construct with name 'Bucket' in $Root [env0]

hint: Every preflight object needs a unique identifier within its scope. You can assign one as shown:

> new cloud.Bucket() as "MyBucket";

For more information, see https://www.winglang.io/docs/concepts/application-tree
  --> ../../../examples/tests/error/repeat_construct_id.test.w:4:15
  | bring cloud;
  | 
  | let bucket1 = new cloud.Bucket();
4 | let bucket2 = new cloud.Bucket();
  |               ^
at <ABSOLUTE>/repeat_construct_id.test.w:4:15

Tests 1 failed (1)
Snapshots 1 skipped
Test Files 1 failed (1)
Duration <DURATION>"
`;

exports[`repeat_construct_id2.test.w 1`] = `
"Error: There is already a Construct with name 'bucket-name' in $Root [env0]

hint: Every preflight object needs a unique identifier within its scope. You can assign one as shown:

> new cloud.Bucket() as "MyBucket";

For more information, see https://www.winglang.io/docs/concepts/application-tree
  --> ../../../examples/tests/error/repeat_construct_id2.test.w:8:15
  | };
  | 
  | let bucket1 = new cloud.Bucket() as "{make_name()}";
8 | let bucket2 = new cloud.Bucket() as "{make_name()}";
  |               ^
at <ABSOLUTE>/repeat_construct_id2.test.w:8:15

Tests 1 failed (1)
Snapshots 1 skipped
Test Files 1 failed (1)
Duration <DURATION>"
`;

exports[`string_from_json.test.w 1`] = `
"Error: unable to parse string:
- string must be string
  --> ../../../examples/tests/error/string_from_json.test.w:5:14
  | // If it is run with other tests, subsequent failures will be ignored in snapshot.
  | let j = Json { a: 123 };
  | 
5 | let a: str = str.fromJson(j.get("a"));
  |              ^
at <ABSOLUTE>/string_from_json.test.w:5:14

Tests 1 failed (1)
Snapshots 1 skipped
Test Files 1 failed (1)
Duration <DURATION>"
`;

exports[`struct_from_json_1.test.w 1`] = `
"Error: unable to parse Person:
- Person/age must be number
   --> ../../../examples/tests/error/struct_from_json_1.test.w:11:1
   | 
   | let j = {name: "cool", age: "not a number"};
   | 
11 | Person.fromJson(j);
   | ^
at <ABSOLUTE>/struct_from_json_1.test.w:11:1

Tests 1 failed (1)
Snapshots 1 skipped
Test Files 1 failed (1)
Duration <DURATION>"
`;

exports[`struct_from_json_2.test.w 1`] = `
"Error: unable to parse Student:
- Student must have required property 'advisor'
- Student/age must be number
   --> ../../../examples/tests/error/struct_from_json_2.test.w:22:1
   |   age: "not a number"
   | };
   | 
22 | Student.fromJson(missingAdvisor);
   | ^
at <ABSOLUTE>/struct_from_json_2.test.w:22:1

Tests 1 failed (1)
Snapshots 1 skipped
Test Files 1 failed (1)
Duration <DURATION>"
`;

exports[`struct_from_json_3.test.w 1`] = `
"Error: unable to parse Student:
- Student/advisors/1/id must be string
- Student/age must be number
   --> ../../../examples/tests/error/struct_from_json_3.test.w:26:1
   |   ]
   | };
   | 
26 | Student.fromJson(invalidAdvisorInArray);
   | ^
at <ABSOLUTE>/struct_from_json_3.test.w:26:1

Tests 1 failed (1)
Snapshots 1 skipped
Test Files 1 failed (1)
Duration <DURATION>"
`;

exports[`struct_from_json_4.test.w 1`] = `
"Error: unable to parse Student:
- Student/advisors must NOT have duplicate items (items ## 0 and 1 are identical)
   --> ../../../examples/tests/error/struct_from_json_4.test.w:27:1
   |   ]
   | };
   | 
27 | Student.fromJson(invalidAdvisorInArray);
   | ^
at <ABSOLUTE>/struct_from_json_4.test.w:27:1

Tests 1 failed (1)
Snapshots 1 skipped
Test Files 1 failed (1)
Duration <DURATION>"
`;

exports[`struct_from_json_5.test.w 1`] = `
"Error: unable to parse Foo:
- Foo/names/c must be string
   --> ../../../examples/tests/error/struct_from_json_5.test.w:16:1
   |   }
   | };
   | 
16 | Foo.fromJson(jFoo);
   | ^
at <ABSOLUTE>/struct_from_json_5.test.w:16:1

Tests 1 failed (1)
Snapshots 1 skipped
Test Files 1 failed (1)
Duration <DURATION>"
`;

exports[`utilities.test.w 1`] = `
"Error: assertion failed: false
  --> ../../../examples/tests/error/utilities.test.w:1:1
1 | assert(false);
  | ^
at <ABSOLUTE>/utilities.test.w:1:1

Tests 1 failed (1)
Snapshots 1 skipped
Test Files 1 failed (1)
Duration <DURATION>"
`;
